crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-duckdb[memory]_tpch_q20_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q20"
---
+--------------------+--------------------------------------+
| s_name             | s_address                            |
+--------------------+--------------------------------------+
| Supplier#000000091 | YV45D7TkfdQanOOZ7q9QxkyGUapU1oOWU6q3 |
| Supplier#000000157 | ,mEGorBfVIm                          |
| Supplier#000000197 | YC2Acon6kjY3zj3Fbxs2k4Vdf7X0cd2F     |
| Supplier#000000205 | rF uV8d0JNEk                         |
| Supplier#000000287 | 7a9SP7qW5Yku5PvSg                    |
| Supplier#000000354 | w8fOo5W,aS                           |
| Supplier#000000361 | f8IUYRmdVXhQC9qJQjWknCXmzhe38vCbk6   |
| Supplier#000000402 | i9Sw4DoyMhzhKXCH9By,AYSgmD           |
| Supplier#000000555 | TfB,a5bfl3Ah 3Z 74GqnNs6zKVGM        |
| Supplier#000000640 | mvvtlQKsTOsJj5Ihk7,cq                |
+--------------------+--------------------------------------+
