crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-duckdb[memory]_tpch_q8_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q8"
---
+--------+------------+
| o_year | mkt_share  |
+--------+------------+
| 1995   | 0.03953511 |
| 1996   | 0.03897424 |
+--------+------------+
