crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-federated_clickbench_q20.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q20"
---
+--------------------+
| UserID             |
+--------------------+
| 435090932899640449 |
| 435090932899640449 |
| 435090932899640449 |
| 435090932899640449 |
+--------------------+
