crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-federated_tpcds_q28.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q28"
---
+-------------------+--------+---------+------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
| B1_LP             | B1_CNT | B1_CNTD | B2_LP            | B2_CNT | B2_CNTD | B3_LP             | B3_CNT | B3_CNTD | B4_LP             | B4_CNT | B4_CNTD | B5_LP             | B5_CNT | B5_CNTD | B6_LP              | B6_CNT | B6_CNTD |
+-------------------+--------+---------+------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
| 56.47549529806653 | 36049  | 7003    | 90.9242456766139 | 31399  | 8235    | 61.57406526359087 | 29174  | 6522    | 69.69225856353589 | 36200  | 8320    | 89.28696293306842 | 32212  | 7930    | 106.97479703765808 | 28626  | 9058    |
+-------------------+--------+---------+------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
