crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-federated_tpcds_q9.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q9"
---
+-------------------+--------------------+--------------------+-------------------+--------------------+
| bucket1           | bucket2            | bucket3            | bucket4           | bucket5            |
+-------------------+--------------------+--------------------+-------------------+--------------------+
| 39.58666235453538 | 116.11497611055162 | 192.43918583506914 | 267.1876616705382 | 342.96675890855977 |
+-------------------+--------------------+--------------------+-------------------+--------------------+
