crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-postgres_clickbench_q26.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q26"
---
+-------------------------------------------------+
| SearchPhrase                                    |
+-------------------------------------------------+
| $_get lucky marave                              |
| 0007.5 косовки видео camcord radar mamara coral |
| 003 07 2013 смотреть                            |
| 007 days longhi pajero girl.                    |
| 007 года в кемеровоз наружной вот за            |
| 007 года в кемеровоз наружной вот за            |
| 007 года в кемеровоз наружной вот за            |
| 007 года в кемпионеры 2 сезон о причи           |
| 007 года в кирпич                               |
| 007: комнатно в хорошок себе                    |
+-------------------------------------------------+
