crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-postgres_clickbench_q30.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q30"
---
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
| sum(hits.ResolutionWidth) | sum(hits.ResolutionWidth + Int64(1)) | sum(hits.ResolutionWidth + Int64(2)) | sum(hits.ResolutionWidth + Int64(3)) | sum(hits.ResolutionWidth + Int64(4)) | sum(hits.ResolutionWidth + Int64(5)) | sum(hits.ResolutionWidth + Int64(6)) | sum(hits.ResolutionWidth + Int64(7)) | sum(hits.ResolutionWidth + Int64(8)) | sum(hits.ResolutionWidth + Int64(9)) | sum(hits.ResolutionWidth + Int64(10)) | sum(hits.ResolutionWidth + Int64(11)) | sum(hits.ResolutionWidth + Int64(12)) | sum(hits.ResolutionWidth + Int64(13)) | sum(hits.ResolutionWidth + Int64(14)) | sum(hits.ResolutionWidth + Int64(15)) | sum(hits.ResolutionWidth + Int64(16)) | sum(hits.ResolutionWidth + Int64(17)) | sum(hits.ResolutionWidth + Int64(18)) | sum(hits.ResolutionWidth + Int64(19)) | sum(hits.ResolutionWidth + Int64(20)) | sum(hits.ResolutionWidth + Int64(21)) | sum(hits.ResolutionWidth + Int64(22)) | sum(hits.ResolutionWidth + Int64(23)) | sum(hits.ResolutionWidth + Int64(24)) | sum(hits.ResolutionWidth + Int64(25)) | sum(hits.ResolutionWidth + Int64(26)) | sum(hits.ResolutionWidth + Int64(27)) | sum(hits.ResolutionWidth + Int64(28)) | sum(hits.ResolutionWidth + Int64(29)) | sum(hits.ResolutionWidth + Int64(30)) | sum(hits.ResolutionWidth + Int64(31)) | sum(hits.ResolutionWidth + Int64(32)) | sum(hits.ResolutionWidth + Int64(33)) | sum(hits.ResolutionWidth + Int64(34)) | sum(hits.ResolutionWidth + Int64(35)) | sum(hits.ResolutionWidth + Int64(36)) | sum(hits.ResolutionWidth + Int64(37)) | sum(hits.ResolutionWidth + Int64(38)) | sum(hits.ResolutionWidth + Int64(39)) | sum(hits.ResolutionWidth + Int64(40)) | sum(hits.ResolutionWidth + Int64(41)) | sum(hits.ResolutionWidth + Int64(42)) | sum(hits.ResolutionWidth + Int64(43)) | sum(hits.ResolutionWidth + Int64(44)) | sum(hits.ResolutionWidth + Int64(45)) | sum(hits.ResolutionWidth + Int64(46)) | sum(hits.ResolutionWidth + Int64(47)) | sum(hits.ResolutionWidth + Int64(48)) | sum(hits.ResolutionWidth + Int64(49)) | sum(hits.ResolutionWidth + Int64(50)) | sum(hits.ResolutionWidth + Int64(51)) | sum(hits.ResolutionWidth + Int64(52)) | sum(hits.ResolutionWidth + Int64(53)) | sum(hits.ResolutionWidth + Int64(54)) | sum(hits.ResolutionWidth + Int64(55)) | sum(hits.ResolutionWidth + Int64(56)) | sum(hits.ResolutionWidth + Int64(57)) | sum(hits.ResolutionWidth + Int64(58)) | sum(hits.ResolutionWidth + Int64(59)) | sum(hits.ResolutionWidth + Int64(60)) | sum(hits.ResolutionWidth + Int64(61)) | sum(hits.ResolutionWidth + Int64(62)) | sum(hits.ResolutionWidth + Int64(63)) | sum(hits.ResolutionWidth + Int64(64)) | sum(hits.ResolutionWidth + Int64(65)) | sum(hits.ResolutionWidth + Int64(66)) | sum(hits.ResolutionWidth + Int64(67)) | sum(hits.ResolutionWidth + Int64(68)) | sum(hits.ResolutionWidth + Int64(69)) | sum(hits.ResolutionWidth + Int64(70)) | sum(hits.ResolutionWidth + Int64(71)) | sum(hits.ResolutionWidth + Int64(72)) | sum(hits.ResolutionWidth + Int64(73)) | sum(hits.ResolutionWidth + Int64(74)) | sum(hits.ResolutionWidth + Int64(75)) | sum(hits.ResolutionWidth + Int64(76)) | sum(hits.ResolutionWidth + Int64(77)) | sum(hits.ResolutionWidth + Int64(78)) | sum(hits.ResolutionWidth + Int64(79)) | sum(hits.ResolutionWidth + Int64(80)) | sum(hits.ResolutionWidth + Int64(81)) | sum(hits.ResolutionWidth + Int64(82)) | sum(hits.ResolutionWidth + Int64(83)) | sum(hits.ResolutionWidth + Int64(84)) | sum(hits.ResolutionWidth + Int64(85)) | sum(hits.ResolutionWidth + Int64(86)) | sum(hits.ResolutionWidth + Int64(87)) | sum(hits.ResolutionWidth + Int64(88)) | sum(hits.ResolutionWidth + Int64(89)) |
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
| 7662885163                | 7667885163                           | 7672885163                           | 7677885163                           | 7682885163                           | 7687885163                           | 7692885163                           | 7697885163                           | 7702885163                           | 7707885163                           | 7712885163                            | 7717885163                            | 7722885163                            | 7727885163                            | 7732885163                            | 7737885163                            | 7742885163                            | 7747885163                            | 7752885163                            | 7757885163                            | 7762885163                            | 7767885163                            | 7772885163                            | 7777885163                            | 7782885163                            | 7787885163                            | 7792885163                            | 7797885163                            | 7802885163                            | 7807885163                            | 7812885163                            | 7817885163                            | 7822885163                            | 7827885163                            | 7832885163                            | 7837885163                            | 7842885163                            | 7847885163                            | 7852885163                            | 7857885163                            | 7862885163                            | 7867885163                            | 7872885163                            | 7877885163                            | 7882885163                            | 7887885163                            | 7892885163                            | 7897885163                            | 7902885163                            | 7907885163                            | 7912885163                            | 7917885163                            | 7922885163                            | 7927885163                            | 7932885163                            | 7937885163                            | 7942885163                            | 7947885163                            | 7952885163                            | 7957885163                            | 7962885163                            | 7967885163                            | 7972885163                            | 7977885163                            | 7982885163                            | 7987885163                            | 7992885163                            | 7997885163                            | 8002885163                            | 8007885163                            | 8012885163                            | 8017885163                            | 8022885163                            | 8027885163                            | 8032885163                            | 8037885163                            | 8042885163                            | 8047885163                            | 8052885163                            | 8057885163                            | 8062885163                            | 8067885163                            | 8072885163                            | 8077885163                            | 8082885163                            | 8087885163                            | 8092885163                            | 8097885163                            | 8102885163                            | 8107885163                            |
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
